# toyhack

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  configure  configure.ac
fritzing/kyoryuger/: gaburevolver.fzz  minityra.fzz
fritzing/yokai-watch/: yokai-watch-dx.fzz
src/: toyhack.h
src/ble/central/Windows/: ToyHack.sln
src/ble/central/Windows/ToyHack/: Advertising.Designer.cs  Advertising.cs  GaburevolverConsole.Designer.cs  GaburevolverConsole.cs  Judenchi.cs  MinityraConsole.Designer.cs  MinityraConsole.cs  Program.cs  ToyHack.csproj  ToyHackBLE.cs  YokaiMedal.cs  YokaiWatchConsole.Designer.cs  YokaiWatchConsole.cs  YokaiWatchConsole.resx
src/ble/central/Windows/ToyHack/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/ble/peripheral/: gaburevolver.js  index.js  minityra.js  package.json  toyhack-service.js  yokai-watch.js
src/common/: Makefile.am  Makefile.in  console.cpp  console.hpp
src/kyoryuger/: Makefile.am  Makefile.in  judenchi.h
src/kyoryuger/gaburevolver/: Makefile.am  Makefile.in  gaburevolver_ctl.cpp
src/kyoryuger/gaburevolver/lib/: Makefile.am  Makefile.in  libgaburevolver.c  libgaburevolver.h
src/kyoryuger/minityra/: Makefile.am  Makefile.in  minityra_ctl.cpp
src/kyoryuger/minityra/lib/: Makefile.am  Makefile.in  libminityra.c  libminityra.h
src/yokai-watch/: Makefile.am  Makefile.in  yokai-medal-common.h  yokai-medal-zero.h  yokai-medal.h  yokai-watch_ctl.cpp
src/yokai-watch/dx/: Makefile.am  Makefile.in  yokai-watch_ctl.cpp
src/yokai-watch/dx/lib/: Makefile.am  libyokai-watch.c
src/yokai-watch/lib/: Makefile.am  Makefile.in  libyokai-watch.c  libyokai-watch.h
